--- a/Expressions_Two_Ts.ipynb
+++ b/Expressions_Two_Ts.ipynb
@@ -29,21 +29,21 @@
         "id": "hMhPBvnrARcd"
       },
       "source": [
-        "# *Two-Ts*: Reprodução de Expressões Faciais em Cabeça Robótica com Tecnologia 3D\n",
+        "# *Two-Ts*: Reproduction of Facial Expressions in Robotic Head with 3D Technology\n",
         "\n",
-        "Trabalho de Mestrado em Ciência da Computação da Universidade Federal do ABC (UFABC).\n",
+        "Master's degree in Computer Science at Federal University of ABC.\n",
         "\n",
-        "Discente: Tamires dos Santos.\n",
+        "Student: Tamires dos Santos.\n",
         "\n",
-        "Orientador: Wagner Tanaka Botelho.\n",
+        "Advisor: Wagner Tanaka Botelho.\n",
         "\n",
-        "Bolsas Recebidas:\n",
-        "+ Treinamento Técnico (TT-3) do Programa PIPE da Fundação de Amparo à Pesquisa do Estado de São Paulo - FAPESP, com o processo número 2019/08079-1, pela  Startup NTU Software Technology do Projeto PIPE Fase 2 (Processo Número: 2018/04306-0) no período de Junho/2019 a Maio/2020;\n",
-        "+ Bolsa de mestrado da Coordenação de Aperfeiçoamento de Pessoal de Nível Superior (CAPES) no período de Outubro/2020 a Fevereiro/2021.\n",
+        "Scholarships Received:\n",
+        "+ Technical Training (TT-3) of the PIPE Program of the São Paulo Research Support Foundation, with process number 2019/08079-1, by Startup NTU Software Technology of the PIPE Phase 2 Project (Process Number: 2018/04306-0) from June/2019 to May/2020;\n",
+        "+ Master's Scholarship from the Coordination for the Improvement of Higher Education Personnel from October/2020 to February/2021.\n",
         "\n",
         "\n",
         "\n",
-        "Data de modificação: Julho/2021."
+        "Modification Date: July/2021."
       ]
     },
     {
