--- a/Expressions_Two_Ts.ipynb
+++ b/Expressions_Two_Ts.ipynb
@@ -52,14 +52,14 @@
         "id": "XiVMHhCOMzyq"
       },
       "source": [
-        "# Sistema de validação das Expressões da *Two-Ts*\n",
+        "# Expression Validation System of the *Two-Ts*\n",
         "\n",
         "\n",
-        "Este notebook usa o projeto de código aberto [OpenFace](https://github.com/TadasBaltrusaitis/OpenFace), de Tadas Baltrusaitis, para detectar a partir de uma face, as Unidades de Ações (UAs) baseadas no FACS criada por [Paul Ekman](https://www.paulekman.com/) em  parceria com Wallace Friesen. \n",
+        "This notebook uses the open source project [OpenFace](https://github.com/TadasBaltrusaitis/OpenFace), by Tadas Baltrusaitis, to detect from a face, the FACS based Action Units (AUs) created by [Paul Ekman](https://www.paulekman.com/) in partnership with Wallace Friesen.\n",
         "\n",
-        "Além da instruções presentes no github do OpenFace, também foi utilizado como base o artigo e notebbok criado por Jin Hyun Cheong (https://towardsdatascience.com/how-to-extract-facial-expressions-head-pose-and-gaze-from-any-youtube-video-2aa6590c2bb6).\n",
+        "In addition to the instructions on OpenFace's github, the article and notebook created by Jin Hyun Cheong (https://towardsdatascience.com/how-to-extract-facial-expressions-head-pose-and-gaze- from-any-youtube-video-2aa6590c2bb6).\n",
         "\n",
-        "O objetivo do código é realizar a validação das expressões faciais, durante a reprodução das seis emoções básicas e universais, na face da *Two-Ts* virtual e real, em comparação com a da discente Tamires dos Santos. "
+        "The purpose of the code is to perform the validation of facial expressions, during the reproduction of the six basic and universal emotions, on the face of the *Two-Ts* Virtual and Real, compared to Tamires dos Santos."
       ]
     },
     {
@@ -68,7 +68,7 @@
         "id": "AlvZkuHc0ynn"
       },
       "source": [
-        "### Instalação do OpenFace"
+        "### Installing OpenFace"
       ]
     },
     {
@@ -123,9 +123,9 @@
         "id": "F8QW173G15ev"
       },
       "source": [
-        "### Selecionar imagens \n",
+        "### Select images \n",
         "\n",
-        "Localiza as imagens e extrae os dados."
+        "Find the images and extract the data."
       ]
     },
     {
@@ -137,9 +137,9 @@
         "# Create folder to store data\n",
         "!rm -rf processed\n",
         "\n",
-        "!./OpenFace/build/bin/FaceLandmarkImg -f virtual.jpg -out_dir processed -of dataImage1   #Two-Ts virtual\n",
-        "!./OpenFace/build/bin/FaceLandmarkImg -f real.jpg -out_dir processed -of dataImage2  #Two-Ts real\n",
-        "!./OpenFace/build/bin/FaceLandmarkImg -f tamires.png -out_dir processed -of dataImage3  #Discente Tamires"
+        "!./OpenFace/build/bin/FaceLandmarkImg -f virtual.jpg -out_dir processed -of dataImage1   #Two-Ts Virtual\n",
+        "!./OpenFace/build/bin/FaceLandmarkImg -f real.jpg -out_dir processed -of dataImage2  #Two-Ts Real\n",
+        "!./OpenFace/build/bin/FaceLandmarkImg -f tamires.png -out_dir processed -of dataImage3  #Tamires"
       ],
       "execution_count": null,
       "outputs": []
@@ -150,9 +150,9 @@
         "id": "1Z1nUfT22bMH"
       },
       "source": [
-        "###Carregar os dados de cada imagem\n",
+        "###Load the data for each image\n",
         "\n",
-        "Será carregado os dados das imagens em Pandas, renomeando as colunas para eliminar espaços vazios."
+        "The image data will be loaded into Pandas, renaming the columns to eliminate empty spaces."
       ]
     },
     {
@@ -186,7 +186,7 @@
         "id": "SPvbE8Tb3Dqv"
       },
       "source": [
-        "### Plotar os resultados das UAs\n"
+        "### Plot the results of the AUs\n"
       ]
     },
     {
@@ -214,7 +214,7 @@
         "  \n",
         "  return au_values\n",
         "\n",
-        "listName = ['UA1', 'UA2', 'UA4', 'UA5', 'UA6' ,'UA7', 'UA9', 'UA10', 'UA12', 'UA14', 'UA15', 'UA17', 'UA20', 'UA23', 'UA25', 'UA26' , 'UA45']\n",
+        "listName = ['AU1', 'AU2', 'AU4', 'AU5', 'AU6' ,'AU7', 'AU9', 'AU10', 'AU12', 'AU14', 'AU15', 'AU17', 'AU20', 'AU23', 'AU25', 'AU26' , 'AU45']\n",
         "\n",
         "#au_regex_pat = re.compile(r'^AU[0-9]+_r$')\n",
         "#au_columns1 = df1.columns[df1.columns.str.contains(au_regex_pat)]\n",
@@ -234,8 +234,8 @@
         "plt.xticks(rotation=20)\n",
         "plt.legend()\n",
         "plt.gcf().set_size_inches(20, 5) \n",
-        "plt.ylabel('Intensidade')\n",
-        "plt.xlabel('Unidade de Ação')\n",
+        "plt.ylabel('Intensity')\n",
+        "plt.xlabel('Action Unit')\n",
         "plt.show()"
       ],
       "execution_count": null,
