--- a/Expressions_Two_Ts.ipynb
+++ b/Expressions_Two_Ts.ipynb
@@ -57,7 +57,7 @@
         "\n",
         "This notebook uses the open source project [OpenFace](https://github.com/TadasBaltrusaitis/OpenFace), by Tadas Baltrusaitis, to detect from a face, the FACS based Action Units (AUs) created by [Paul Ekman](https://www.paulekman.com/) in partnership with Wallace Friesen.\n",
         "\n",
-        "In addition to the instructions on OpenFace's github, the article and notebook created by Jin Hyun Cheong (https://towardsdatascience.com/how-to-extract-facial-expressions-head-pose-and-gaze- from-any-youtube-video-2aa6590c2bb6).\n",
+        "In addition to the instructions on OpenFace's github, the article and notebook created by Jin Hyun Cheong (https://towardsdatascience.com/how-to-extract-facial-expressions-head-pose-and-gaze-from-any-youtube-video-2aa6590c2bb6).\n",
         "\n",
         "The purpose of the code is to perform the validation of facial expressions, during the reproduction of the six basic and universal emotions, on the face of the *Two-Ts* Virtual and Real, compared to Tamires dos Santos."
       ]
